plugins {
    id 'java'
    id 'application'
    id 'com.gradleup.shadow' version '9.3.0'
}

repositories {
    mavenCentral()
}

group = 'com.voicescape'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

dependencies {
    implementation 'io.netty:netty-all:4.2.12.Final'
    implementation 'org.slf4j:slf4j-api:2.0.12'
    implementation 'ch.qos.logback:logback-classic:1.5.3'
}

application {
    mainClass = 'com.voicescape.server.VoiceScapeServer'
}

shadowJar {
    archiveFileName = 'voicescape-server.jar'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['-Xlint:deprecation']
}
